--- a/index.html
+++ b/index.html
@@ -110,6 +110,37 @@
             <img src="images/shot-4.png" class="card-img-top" alt="...">
           </div>
     </section>
+
+    <section class="about" id="about">
+      <div class="card-body about">
+        <div class="content">
+          <h2>About <br>Myself</h2>
+          <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and
+          experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+          <p>LET’S CONNECT</p>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="#"><img src="images/twitter.png" alt=""></a> </li>
+            <li class="list-inline-item"><a href="#"><img src="images/linkedin.png" alt=""></a></li>
+            <li class="list-inline-item"><a href="#"><img src="images/medium.png" alt=""></a></li>
+            <li class="list-inline-item"><a href="#"><img src="images/Vector.png" alt=""></a></li>
+            <li class="list-inline-item"><a href="#"><img src="images/angelist 1.png" alt=""></a></li>
+          </ul>
+          <a href="#" class="btn btn-outline-primary my-2">Get my resume</a>
+        </div>
+        <ul class="list-unstyled">
+          <li class="h6">Languages</li>
+          <li>
+            <ul class="list-inline">
+              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (1).png" alt=""><span>Javascript</span></li>
+              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (2).png" alt=""><span>Html</span></li>
+              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (3).png" alt=""><span>Css</span></li>
+            </ul>
+          </li>
+          <li class="h6">Frameworks</li>
+          <li class="h6">Skills</li>
+        </ul>
+      </div>
+    </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
