--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="card-body about">
         <div class="content">
           <h2>About <br>Myself</h2>
-          <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and
+          <p style="width: 80%; text-align: justify;">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and
           experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
           <p>LET’S CONNECT</p>
           <ul class="list-inline">
@@ -127,17 +127,19 @@
           </ul>
           <a href="#" class="btn btn-outline-primary my-2">Get my resume</a>
         </div>
-        <ul class="list-unstyled">
-          <li class="h6">Languages</li>
+        <ul class="list-unstyled content">
+          <li class="h6 lang">Languages</li>
           <li>
-            <ul class="list-inline">
-              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (1).png" alt=""><span>Javascript</span></li>
-              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (2).png" alt=""><span>Html</span></li>
-              <li class="list-inline-item pe-5"><img src="images/Ellipse 1 (3).png" alt=""><span>Css</span></li>
+            <ul class="list-inline lang-container">
+              <li class="list-inline-item pe-5 language"><img src="images/Ellipse 1 (1).png" alt=""><br><span>Javascript</span></li>
+              <li class="list-inline-item pe-5 language"><img src="images/Ellipse 1 (2).png" alt=""><br><span>Html</span></li>
+              <li class="list-inline-item pe-5 language"><img src="images/Ellipse 1 (3).png" alt=""><br><span>Css</span></li>
             </ul>
           </li>
-          <li class="h6">Frameworks</li>
-          <li class="h6">Skills</li>
+          <li class="h6 lang">Frameworks</li>
+          <hr>
+          <li class="h6 lang">Skills</li>
+          <hr>
         </ul>
       </div>
     </section>
