--- a/index.html
+++ b/index.html
@@ -143,6 +143,18 @@
         </ul>
       </div>
     </section>
+
+    <section class="container-fluid contact-me" id="contact">
+      <h2 style="color: #fff;">Contact me</h2>
+      <p style="width: 30%; color: #fff;">If you have an application you are interested in developing, a feature that you need built or a project that needs
+      coding. I’d love to help with it</p>
+      <form action="" >
+        <input type="text" name="" id="" class="form-control form">
+        <input type="email" class="form-control form">
+        <textarea class="form-control form"></textarea>
+        <a href="#" class="btn btn-outline-light my-2">Get in touch</a>
+      </form>
+    </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
