--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
+        <script src="https://kit.fontawesome.com/b4560ff9ae.js" crossorigin="anonymous"></script>
+      </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <nav class="navbar navbar-expand-sm fixed-top">
 
         <div class="container">
             <a href="#" class="navbar-brand h1">My logo</a>
-            <ul class="navbar-nav">
+            <i class="fa-solid fa-bars icon"></i>
+            <ul class="navbar-nav" id="nav-icon">
                 <li class="nav-item"> <a href="#portfolio" class="nav-link text-dark pe-5">Portfolio</a> </li>
                 <li class="nav-item"> <a href="#about" class="nav-link text-dark pe-5">About</a> </li>
                 <li class="nav-item"> <a href="#contact" class="nav-link text-dark">Contact</a> </li>
@@ -24,8 +26,8 @@
         </div>
     </nav>
     <section class="main-content" id="portfolio">
-       <div class="content">
-        <h1>I'm Isaac <br>Glad to see you!</h1>
+       <div class="content col-s-12">
+        <h1>I'm Hasenat <br>Glad to see you!</h1>
         <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <p>LET’S CONNECT</p>
         <ul class="list-inline">
@@ -159,6 +161,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="main.js"></script>
 </body>
 
 </html>
